# Text_Detector

./: .gitattributes  .gitignore  LICENSE  README.md  build.sh  main.cpp  meson.build  meson_options.txt  run.sh
include/: cli.h  dbnet.h  drawing.h  geometry.h  nms.h  omp_config.h  run_bench.h  run_single.h  tiling.h  timer.h
models/: ch_PP-OCRv2_det.onnx  ch_PP-OCRv4_server_det.onnx  ch_ppocr_mobile_slim_v2.0_det.onnx
scripts/: build.sh  run.sh
src/: cli.cpp  cli.h  dbnet.cpp  dbnet.h  drawing.cpp  drawing.h  geometry.cpp  geometry.h  main.cpp  nms.cpp  nms.h  omp_config.cpp  omp_config.h  run_bench.cpp  run_bench.h  run_single.cpp  run_single.h  tiling.cpp  tiling.h  timer.h
